sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not enough arguments for method getValeur: (x$1: Int)Int.
Unspecified value parameter x$1.
while (plusPetit(getValeur(i+1),getValeur()i)) {
                                         ^