sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
var lg = getNombreValeurs()
for (i<- 0 to lg-2){
while (plusPetit(getValeur(i+1),getValeur()i)) {
	echange(i, i+1)
}
}
}
